Fixing expanded hamburger menu overlap

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -49,7 +49,7 @@
         position: absolute;
         transition: all 0.3s ease;
         transform: translate3d(0, -100%, 0);
-        z-index: 1;
+        z-index: 15;
 
         li {
             border-bottom: thin solid $mainHeaderBackground;
